--- a/FakerSpotter/_Imports.razor
+++ b/FakerSpotter/_Imports.razor
@@ -12,10 +12,10 @@
 
 @using Blazored.LocalStorage
 @using Blazorise
+@using Blazorise.SpinKit
 @using Markdig
 
 @using FakerSpotter
 @using FakerSpotter.Components
-@using FakerSpotter.Core
-@using FakerSpotter.Core.Data
-@using FakerSpotter.Layouts
+@using FakerSpotter.Models
+@using FakerSpotter.Services
