--- a/FakerSpotter/App.razor
+++ b/FakerSpotter/App.razor
@@ -1,9 +1,9 @@
 <Router AppAssembly="typeof(Program).Assembly" PreferExactMatches="true">
     <Found Context="routeData">
-        <RouteView RouteData="routeData" DefaultLayout="typeof(MainLayout)"/>
+        <RouteView RouteData="routeData" DefaultLayout="typeof(AppLayout)"/>
     </Found>
     <NotFound>
-        <LayoutView Layout="typeof(MainLayout)">
+        <LayoutView Layout="typeof(AppLayout)">
             <Container TextAlignment="TextAlignment.Center">
                 <Heading Size="HeadingSize.Is3">404</Heading>
                 <Paragraph>Sorry, there's nothing at this address.</Paragraph>
