--- a/FakerSpotter/Pages/Rooms/Room2.razor
+++ b/FakerSpotter/Pages/Rooms/Room2.razor
@@ -1,24 +1,42 @@
 ﻿@page "/room/2"
 
-<RoomPanel RoomName="@string.Format("Room 2: Spot the fake headline! ({0}/5)", QuestionsAnswered)" RoomPoints="Points" IsCompleted="UserSettings.IsRoomTwoCompleted" IsLocked="!UserSettings.IsRoomOneCompleted" NextRoomEndpoint="room3" PreviousRoomEndpoint="room1">
+@inject NavigationManager NavigationManager
+@inject Random Random
+@inject DatabaseService DatabaseService
+@inject UserService UserService
+@inject VariableService VariableService
+
+<RoomPanel
+    RoomName="@string.Format("Room 2: Spot the fake headline! ({0}/5)", QuestionsAnswered)"
+    RoomPoints="Points" IsCompleted="UserService.IsRoomTwoCompleted"
+    IsLocked="!UserService.IsRoomOneCompleted"
+    NextRoomEndpoint="room3"
+    PreviousRoomEndpoint="room1">
     <RoomContent>
-        @QuestionPanel
+        @if (VariableService.ClosedHeadlineQuestions is { Length: > 0 } && VariableService.MultipleHeadlineQuestions is { Length: > 0 })
+        {
+            @QuestionPanel
+        }
+        else
+        {
+            <SpinKit Type="SpinKitType.Pulse" Centered/>
+        }
     </RoomContent>
 </RoomPanel>
 
 @code
 {
 
-    [Inject] private NavigationManager NavigationManager { get; set; }
-    [Inject] private HttpClient HttpClient { get; set; }
-    [Inject] private Random Random { get; set; }
-
     private int Points { get; set; } = 200;
     private int QuestionsAnswered { get; set; }
     private RenderFragment QuestionPanel { get; set; }
 
-    protected override void OnInitialized()
+    protected override async Task OnInitializedAsync()
     {
+        VariableService.ClosedHeadlineQuestions ??= await DatabaseService.GetClosedHeadlineQuestionAsync();
+        VariableService.MultipleHeadlineQuestions ??= await DatabaseService.GetMultipleHeadlineQuestionsAsync();
+        Console.WriteLine($"CHQ: {VariableService.ClosedHeadlineQuestions.Length}");
+        Console.WriteLine($"MHQ: {VariableService.MultipleHeadlineQuestions.Length}");
         NextQuestion();
     }
 
@@ -44,23 +62,23 @@
             NextRoom();
         }
     }
-
-    private RenderFragment BuildClosedQuestion(HeadlineClosedQuestion question)
+    
+    private RenderFragment BuildClosedQuestion(ClosedHeadlineQuestion question)
     {
         return builder =>
         {
-            builder.OpenComponent(0, typeof(HeadlineClosedPanel));
+            builder.OpenComponent(0, typeof(ClosedHeadlineQuestionPanel));
             builder.AddAttribute(1, "Question", question);
             builder.AddAttribute(2, "OnComplete", EventCallback.Factory.Create<bool>(this, OnQuestionCompleted));
             builder.CloseComponent();
         };
     }
-
-    private RenderFragment BuildMultipleChoiceQuestion(IDictionary<string, bool> question)
+    
+    private RenderFragment BuildMultipleStatementQuestion(MultipleHeadlineQuestion question)
     {
         return builder =>
         {
-            builder.OpenComponent(0, typeof(HeadlineMultipleChoicePanel));
+            builder.OpenComponent(0, typeof(MultipleHeadlineQuestionPanel));
             builder.AddAttribute(1, "Question", question);
             builder.AddAttribute(2, "OnComplete", EventCallback.Factory.Create<bool>(this, OnQuestionCompleted));
             builder.CloseComponent();
@@ -71,20 +89,20 @@
     {
         if (Random.Next(0, 2) == 0)
         {
-            var closedQuestion = GlobalVariables.HeadlineQuestions.ClosedQuestions[Random.Next(GlobalVariables.HeadlineQuestions.ClosedQuestions.Length)];
-            QuestionPanel = BuildClosedQuestion(closedQuestion);
+            var question = VariableService.ClosedHeadlineQuestions[Random.Next(VariableService.ClosedHeadlineQuestions.Length)];
+            QuestionPanel = BuildClosedQuestion(question);
         }
         else
         {
-            var multipleChoiceQuestion = GlobalVariables.HeadlineQuestions.MultipleChoiceQuestions[Random.Next(GlobalVariables.HeadlineQuestions.MultipleChoiceQuestions.Length)];
-            QuestionPanel = BuildMultipleChoiceQuestion(multipleChoiceQuestion);
+            var question = VariableService.MultipleHeadlineQuestions[Random.Next(VariableService.MultipleHeadlineQuestions.Length)];
+            QuestionPanel = BuildMultipleStatementQuestion(question);
         }
     }
 
     private void NextRoom()
     {
-        UserSettings.PointsAccumulated += Points;
-        UserSettings.IsRoomTwoCompleted = true;
+        UserService.PointsAccumulated += Points;
+        UserService.IsRoomTwoCompleted = true;
         NavigationManager.NavigateTo("room/3");
     }
 
