--- a/FakerSpotter/Pages/Finish.razor
+++ b/FakerSpotter/Pages/Finish.razor
@@ -68,19 +68,19 @@
         switch (points)
         {
             case >= 800:
-                RewardImageUrl = "assets/images/awards/champion.svg";
+                RewardImageUrl = "images/awards/champion.svg";
                 RewardText = "Cyberwellness Champion";
                 break;
             case >= 600:
-                RewardImageUrl = "assets/images/awards/master.svg";
+                RewardImageUrl = "images/awards/master.svg";
                 RewardText = "Cyberwellness Master";
                 break;
             case >= 400:
-                RewardImageUrl = "assets/images/awards/apprentice.svg";
+                RewardImageUrl = "images/awards/apprentice.svg";
                 RewardText = "Cyberwellness Apprentice";
                 break;
             default:
-                RewardImageUrl = "assets/images/awards/novice.svg";
+                RewardImageUrl = "images/awards/novice.svg";
                 RewardText = "Cyberwellness Novice";
                 break;
         }
