--- a/FakerSpotter/Pages/Finish.razor
+++ b/FakerSpotter/Pages/Finish.razor
@@ -1,6 +1,7 @@
 ﻿@page "/finish"
 
 @inject NavigationManager NavigationManager
+@inject DatabaseService DatabaseService
 @inject UserService UserService
 
 @if (IsLocked)
@@ -40,7 +41,7 @@
         <ModalBody>
             <Field>
                 <FieldLabel>Name</FieldLabel>
-                <TextEdit Placeholder=""/>
+                <TextEdit @bind-Text="ShareNameText"/>
             </Field>
         </ModalBody>
         <ModalFooter>
@@ -55,9 +56,10 @@
 @code
 {
 
-    private bool IsLocked => false; // TODO (before publish): !(UserService.IsRoomOneCompleted && UserService.IsRoomTwoCompleted && UserService.IsRoomThreeCompleted);
+    private bool IsLocked => !(UserService.IsRoomOneCompleted && UserService.IsRoomTwoCompleted && UserService.IsRoomThreeCompleted);
     private string RewardImageUrl { get; set; }
     private string RewardText { get; set; }
+    private string ShareNameText { get; set; }
     private Modal ShareModalReference { get; set; }
 
     protected override void OnInitialized()
@@ -95,15 +97,15 @@
         NavigationManager.NavigateTo("");
     }
 
-    private void ShowShareModal()
+    private async Task ShowShareModal()
     {
-        ShareModalReference.Show();
+        await ShareModalReference.Show();
     }
 
-    private void ShareScore()
+    private async Task ShareScore()
     {
-        // TODO: share results
-        ShareModalReference.Hide();
+        await DatabaseService.PostLeaderboardAsync(ShareNameText, UserService.PointsAccumulated);
+        await ShareModalReference.Hide();
     }
 
 }
